--- a/style.css
+++ b/style.css
@@ -3,12 +3,19 @@
     padding: 0;
 }
 
+:root {
+    --main-white: #f0f0f0;
+    --main-red: #be3144;
+    --main-blue: #45567d;
+    --main-gray: #303841;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.4;
-    color: var(--main-white);
+    color: white;
 }
 
 *, *::before, *::after {
@@ -21,21 +28,86 @@ html {
 }
 
 @media (max-width: 75em)
+
 html {
     font-size: 60%;
 }
-
+/*
 a {
     text-decoration: none;
     color: var(--main-white);
-}
 
+}
+*/
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
 ul {
     list-style: none;
 }
 
+h1 {
+	text-align: center;
+	color:white;
+}
+
+h2 {
+	text-align: center;
+	color:white;
+}
+
 img {
 	width:60%;
+	
+}
+
+#projects {
+	color:white;
+}
+.img-container {
+        text-align: center;
+      }
+
+.myButton {
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+	background-color:#768d87;
+	border-radius:5px;
+	border:1px solid #566963;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #2b665e;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+	background-color:#6c7c7c;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
 
 footer {
@@ -46,12 +118,12 @@ footer {
     background: var(--main-gray);
     border-top: 4px solid var(--main-red);
 }
-
+/*
 a:-webkit-any-link {
     color: -webkit-link;
     cursor: pointer;
 }
-
+*/
 #welcome-section {
     display: flex;
     flex-direction: column;
@@ -115,6 +187,21 @@ a:-webkit-any-link {
     border-radius: 2px;
 }
 
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;  
+  border: 2px solid #008CBA;
+}
+
 .contact-section {
     display: flex;
     flex-direction: column;
@@ -126,12 +213,46 @@ a:-webkit-any-link {
     background: var(--main-gray);
 }
 
-:root {
-    --main-white: #f0f0f0;
-    --main-red: #be3144;
-    --main-blue: #45567d;
-    --main-gray: #303841;
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 
 
 
