--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h1 {
 h2 {
 	text-align: center;
 	color:white;
+  text-shadow:  2px 2px black;
 }
 
 img {
@@ -155,7 +156,7 @@ a:-webkit-any-link {
 
 .nav-list {
     display: flex;
-    margin-right: 2rem; 
+    margin-right: 2rem;
 }
 
 .nav-list a {
@@ -198,7 +199,7 @@ a:-webkit-any-link {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  background-color: white;  
+  background-color: white;
   border: 2px solid #008CBA;
 }
 
@@ -251,8 +252,3 @@ a:-webkit-any-link {
   text-decoration: none;
   cursor: pointer;
 }
-
-
-
-
-
