--- a/style.css
+++ b/style.css
@@ -32,13 +32,7 @@ html {
 html {
     font-size: 60%;
 }
-/*
-a {
-    text-decoration: none;
-    color: var(--main-white);
 
-}
-*/
 a:link {
   color: white;
   background-color: transparent;
@@ -54,11 +48,13 @@ a:hover {
   background-color: transparent;
   text-decoration: underline;
 }
+
 a:active {
   color: white;
   background-color: transparent;
   text-decoration: underline;
 }
+
 ul {
     list-style: none;
 }
@@ -82,6 +78,7 @@ img {
 #projects {
 	color:white;
 }
+
 .img-container {
         text-align: center;
       }
@@ -119,12 +116,7 @@ footer {
     background: var(--main-gray);
     border-top: 4px solid var(--main-red);
 }
-/*
-a:-webkit-any-link {
-    color: -webkit-link;
-    cursor: pointer;
-}
-*/
+
 #welcome-section {
     display: flex;
     flex-direction: column;
@@ -226,7 +218,7 @@ a:-webkit-any-link {
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -251,4 +243,76 @@ a:-webkit-any-link {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+/*just added****************************************************** */
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)}
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+/*
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+*/
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
 }
