--- a/style.css
+++ b/style.css
@@ -22,17 +22,6 @@ body {
     box-sizing: inherit;
 }
 
-@media (max-width: 61.25em)
-html {
-    font-size: 58%;
-}
-
-@media (max-width: 75em)
-
-html {
-    font-size: 60%;
-}
-
 a:link {
   color: white;
   background-color: transparent;
@@ -153,8 +142,8 @@ footer {
 
 .nav-list a {
     display: block;
-    font-size: 2.2rem;
-    padding: 2rem;
+    font-size: 1rem;
+    padding: 1rem;
 }
 
 .code {
@@ -206,38 +195,6 @@ footer {
     background: var(--main-gray);
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
 .close:hover,
 .close:focus {
   color: #000;
@@ -245,14 +202,11 @@ footer {
   cursor: pointer;
 }
 
-/*just added****************************************************** */
 #myImg {
   border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+img:hover {opacity: 0.9;}
 
 /* Modal Content (image) */
 .modal-content {
