--- a/style - Copy.css
+++ b/style - Copy.css
@@ -22,23 +22,6 @@ body {
     box-sizing: inherit;
 }
 
-@media (max-width: 61.25em)
-html {
-    font-size: 58%;
-}
-
-@media (max-width: 75em)
-
-html {
-    font-size: 60%;
-}
-/*
-a {
-    text-decoration: none;
-    color: var(--main-white);
-
-}
-*/
 a:link {
   color: white;
   background-color: transparent;
@@ -54,11 +37,13 @@ a:hover {
   background-color: transparent;
   text-decoration: underline;
 }
+
 a:active {
   color: white;
   background-color: transparent;
   text-decoration: underline;
 }
+
 ul {
     list-style: none;
 }
@@ -71,16 +56,18 @@ h1 {
 h2 {
 	text-align: center;
 	color:white;
+  text-shadow:  2px 2px black;
 }
 
 img {
 	width:90%;
-	
+	max-height:auto;
 }
 
 #projects {
 	color:white;
 }
+
 .img-container {
         text-align: center;
       }
@@ -118,12 +105,7 @@ footer {
     background: var(--main-gray);
     border-top: 4px solid var(--main-red);
 }
-/*
-a:-webkit-any-link {
-    color: -webkit-link;
-    cursor: pointer;
-}
-*/
+
 #welcome-section {
     display: flex;
     flex-direction: column;
@@ -155,13 +137,13 @@ a:-webkit-any-link {
 
 .nav-list {
     display: flex;
-    margin-right: 2rem; 
+    margin-right: 2rem;
 }
 
 .nav-list a {
     display: block;
-    font-size: 2.2rem;
-    padding: 2rem;
+    font-size: 1rem;
+    padding: 1rem;
 }
 
 .code {
@@ -198,7 +180,7 @@ a:-webkit-any-link {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  background-color: white;  
+  background-color: white;
   border: 2px solid #008CBA;
 }
 
@@ -213,38 +195,6 @@ a:-webkit-any-link {
     background: var(--main-gray);
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
 .close:hover,
 .close:focus {
   color: #000;
@@ -252,7 +202,71 @@ a:-webkit-any-link {
   cursor: pointer;
 }
 
+#myImg {
+  border-radius: 5px;
+}
 
+img:hover {opacity: 0.9;}
 
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
 
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
 
+/* Add Animation */
+.modal-content, #caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)}
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+/*
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+*/
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
