--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ footer {
   border-radius: 5px;
 }
 
-img:hover {opacity: 0.9;}
+img:hover {opacity: .9;}
 
 @-webkit-keyframes zoom {
   from {-webkit-transform:scale(0)}
@@ -236,5 +236,5 @@ img:hover {opacity: 0.9;}
 }
 
 .zoom:hover {
-  transform: scale(2); /* (300% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.75); /* (715% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
