--- a/style - Copy.css
+++ b/style - Copy.css
@@ -22,6 +22,26 @@ body {
     box-sizing: inherit;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 a:link {
   color: white;
   background-color: transparent;
