--- a/style - Copy.css
+++ b/style - Copy.css
@@ -5,7 +5,7 @@
 
 :root {
     --main-white: #f0f0f0;
-    --main-red: #be3144;
+    --main-red: #c41532;
     --main-blue: #45567d;
     --main-gray: #303841;
 }
