--- a/style - Copy.css
+++ b/style - Copy.css
@@ -238,17 +238,6 @@ img:hover {opacity: .9;}
   to {transform:scale(1)}
 }
 
-/* The Close Button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
 .zoom {
   padding: 10px;
   transition: transform .2s; /* Animation */
@@ -256,5 +245,15 @@ img:hover {opacity: .9;}
 }
 
 .zoom:hover {
-  transform: scale(1.75); /* (715% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.25); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.zoom2 {
+  padding: 10px;
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom2:hover {
+  transform: scale(1.05); /* (715% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
