--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ footer {
     width: 100%;
     height: 125vh;
     background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    /*background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);*/ /*use for a gradient bot left to top right*/
 }
 
 #projects {
