--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
 
 a:link {
   color: white;
-  background-color: transparent;
   text-decoration: none;
 }
 a:visited {
@@ -113,8 +112,10 @@ footer {
     align-items: center;
     width: 100%;
     height: 125vh;
+    /*
     background-color: #1A1B41;
-    /*background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);*/ /*use for a gradient bot left to top right*/
+    */
+    background-image: linear-gradient(62deg, #3a3d40 0%, #1A1B41 100%); /*use for a gradient bot left to top right*/
 }
 
 #projects {
@@ -192,13 +193,13 @@ footer {
   transform: scale(1.25); /* (25% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
-.zoom2 {
+.zoomImg {
   padding: 10px;
   transition: transform .2s; /* Animation */
   margin: 0 auto;
 }
 
-.zoom2:hover {
+.zoomImg:hover {
   transform: scale(1.10); /* (10% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
