--- a/lessSandbox/less/styles.less
+++ b/lessSandbox/less/styles.less
@@ -19,6 +19,13 @@ body{
     line-height: @line-height;
 }
 
+footer{
+    p{
+    color:black;
+    text-align: center;
+    }
+}
+
 h1, h3{
     .bordered
 }
