--- a/backups/9_13_2020/style.css
+++ b/backups/9_13_2020/style.css
@@ -26,6 +26,7 @@ body {
     box-sizing: inherit;
 }
 
+/* scrollbar stuff */
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
@@ -48,7 +49,6 @@ body {
 
 a:link {
   color: white;
-  background-color: transparent;
   text-decoration: none;
 }
 a:visited {
@@ -101,7 +101,7 @@ footer {
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
-    background: var(--main-gray);
+    background: #272d2d;
     border-top: 4px solid var(--main-red);
 }
 
@@ -112,14 +112,16 @@ footer {
     align-items: center;
     width: 100%;
     height: 125vh;
-    background-color: #000;
-    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    /*
+    background-color: #1A1B41;
+    */
+    background-image: linear-gradient(62deg, #3a3d40 0%, #1A1B41 100%); /*use for a gradient bot left to top right*/
 }
 
 #projects {
     text-align: center;
     padding: 10rem 2rem;
-    background: var(--main-blue);
+    background: #6290C3;
 }
 
 .nav {
@@ -129,7 +131,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--main-red);
+    background: #272d2d;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
@@ -164,7 +166,7 @@ footer {
     text-align: center;
     height: 80vh;
     padding: 0 2rem;
-    background: var(--main-gray);
+    background: #1A1B41;
 }
 			
 #myImg {
@@ -188,25 +190,25 @@ footer {
 }
 
 .zoom:hover {
-  transform: scale(1.25); /* (20% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.25); /* (25% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
-.zoom2 {
+.zoomImg {
   padding: 10px;
   transition: transform .2s; /* Animation */
   margin: 0 auto;
 }
 
-.zoom2:hover {
+.zoomImg:hover {
   transform: scale(1.10); /* (10% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
-.zoom3 {
+.zoombtn {
   padding: 10px;
   transition: transform .1s; /* Animation */
   margin: 0 auto;
 }
 
-.zoom3:hover {
-  transform: scale(1.4); /* (40% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+.zoombtn:hover {
+  transform: scale(1.25); /* (40% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
