--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ footer {
     /*
     background-color: #1A1B41;
     */
-    background-image: linear-gradient(62deg, #3a3d40 0%, #1A1B41 100%); /*use for a gradient bot left to top right*/
+    background-image: linear-gradient(0deg, #f8f8ff 0%, #1A1B41 110%); /*use for a gradient top to bot*/
 }
 
 #projects {
