--- a/style - Copy.css
+++ b/style - Copy.css
@@ -106,9 +106,8 @@ footer {
     width: 100%;
     height: 125vh;
     /*
-    background-color: #1A1B41;
-    */
     background-image: linear-gradient(0deg, #f8f8ff 0%, #1A1B41 110%); /*use for a gradient top to bot*/
+    background-color: #f8f8ff;
 }
 
 #projects {
@@ -305,6 +304,26 @@ footer {
     margin: 20px;
 }
 
+.myImage {
+  box-shadow: 0 50px 100px rgba(50, 50, 93, .15), 
+  0 15px 35px rgba(50, 50, 93, .2), 
+  0 5px 15px rgba(0, 0, 0, .12);
+}
+
+#myImg {
+  border-radius: 15px;
+  box-shadow: 0 50px 100px rgba(50, 50, 93, .15), 
+  0 15px 35px rgba(50, 50, 93, .2), 
+  0 5px 15px rgba(0, 0, 0, .12);
+}
+
+#me {
+  border-radius: 15px;
+  box-shadow: 0 25px 50px rgba(50, 50, 93, .15), 
+  0 15px 35px rgba(50, 50, 93, .2), 
+  0 5px 15px rgba(0, 0, 0, .12);
+}
+
 .contact-section {
     display: flex;
     flex-direction: column;
@@ -314,10 +333,6 @@ footer {
     height: 80vh;
     padding: 0 2rem;
     background: #f8f8ff;
-}
-			
-#myImg {
-  border-radius: 15px;
 }
 
 @-webkit-keyframes zoom {
