--- a/style.css
+++ b/style.css
@@ -104,10 +104,9 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 125vh;
-    /*
-    background-image: linear-gradient(0deg, #f8f8ff 0%, #1A1B41 110%); /*use for a gradient top to bot*/
+    height: 200vh;
     background-color: #f8f8ff;
+    /*background-image: linear-gradient(0deg, #f8f8ff 0%, #1A1B41 250%); /*use for a gradient top to bot*/
 }
 
 #projects {
