--- a/style - Copy.css
+++ b/style - Copy.css
@@ -316,6 +316,13 @@ footer {
   0 5px 15px rgba(0, 0, 0, .12);
 }
 
+#cert {
+  border-radius: 15px;
+  box-shadow: 0 50px 100px rgba(50, 50, 93, .15), 
+  0 15px 35px rgba(50, 50, 93, .2), 
+  0 5px 15px rgba(0, 0, 0, .12);
+}
+
 #me {
   border-radius: 15px;
   box-shadow: 0 25px 50px rgba(50, 50, 93, .15), 
