--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ footer {
 
 /* start of navbar stuff https://mdbootstrap.com/docs/jquery/navigation/hamburger-menu/*/
 /* Icon 1 */
-.animated-icon1, .animated-icon2, .animated-icon3 {
+.animated-icon1 {
   width: 30px;
   height: 20px;
   position: relative;
@@ -133,7 +133,7 @@ footer {
   cursor: pointer;
   }
   
-  .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
+  .animated-icon1 span {
   display: block;
   position: absolute;
   height: 3px;
@@ -154,15 +154,7 @@ footer {
   .animated-icon1 span {
   background: white;
   }
-  
-  .animated-icon2 span {
-  background: #e3f2fd;
-  }
-  
-  .animated-icon3 span {
-  background: #f3e5f5;
-  }
-  
+   
   .animated-icon1 span:nth-child(1) {
   top: 0px;
   }
@@ -196,94 +188,6 @@ footer {
   transform: rotate(-135deg);
   }
   
-  /* Icon 2*/
-  
-  .animated-icon2 span:nth-child(1) {
-  top: 0px;
-  }
-  
-  .animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
-  top: 10px;
-  }
-  
-  .animated-icon2 span:nth-child(4) {
-  top: 20px;
-  }
-  
-  .animated-icon2.open span:nth-child(1) {
-  top: 11px;
-  width: 0%;
-  left: 50%;
-  }
-  
-  .animated-icon2.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  }
-  
-  .animated-icon2.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  }
-  
-  .animated-icon2.open span:nth-child(4) {
-  top: 11px;
-  width: 0%;
-  left: 50%;
-  }
-  
-  /* Icon 3 */
-  
-  .animated-icon3 span:nth-child(1) {
-  top: 0px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-  }
-  
-  .animated-icon3 span:nth-child(2) {
-  top: 10px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-  }
-  
-  .animated-icon3 span:nth-child(3) {
-  top: 20px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-  }
-  
-  .animated-icon3.open span:nth-child(1) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  top: 0px;
-  left: 8px;
-  }
-  
-  .animated-icon3.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
-  }
-  
-  .animated-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  top: 21px;
-  left: 8px;
-  }
   /*end of navbar stuff */
 
 .project-title {
