--- a/style.css
+++ b/style.css
@@ -80,6 +80,22 @@ h2 {
 	text-align: center;
 }
 
+h3 {
+	text-align: center;
+}
+
+h4 {
+	text-align: center;
+}
+
+h5 {
+	text-align: center;
+}
+
+h6 {
+	text-align: center;
+}
+
 img {
 	width:80%;
 	max-height:auto;
