--- a/style.css
+++ b/style.css
@@ -20,7 +20,19 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: white;
+  animation: fadeInAnimation ease 3s; 
+  animation-iteration-count: 1; 
+  animation-fill-mode: forwards; 
 }
+
+@keyframes fadeInAnimation { 
+  0% { 
+      opacity: 0; 
+  } 
+  100% { 
+      opacity: 1; 
+  } 
+} 
 
 *, *::before, *::after {
   box-sizing: inherit;
