--- a/style - Copy.css
+++ b/style - Copy.css
@@ -20,7 +20,19 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: white;
+  animation: fadeInAnimation ease 3s; 
+  animation-iteration-count: 1; 
+  animation-fill-mode: forwards; 
 }
+
+@keyframes fadeInAnimation { 
+  0% { 
+      opacity: 0; 
+  } 
+  100% { 
+      opacity: 1; 
+  } 
+} 
 
 *, *::before, *::after {
   box-sizing: inherit;
@@ -103,7 +115,7 @@ max-height:auto;
 
 .img-container {
       text-align: center;
-    }
+}
 
 footer {
   font-weight: 300;
@@ -212,8 +224,8 @@ transform: rotate(-135deg);
 
 .project-image {
 box-shadow: 0 50px 100px rgba(50, 50, 93, .15), 
-            0 15px 35px rgba(50, 50, 93, .2), 
-            0 5px 15px rgba(0, 0, 0, .12);
+0 15px 35px rgba(50, 50, 93, .2), 
+0 5px 15px rgba(0, 0, 0, .12);
 }
 
 .btn {
