--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ ul {
 h1, h2, h3, h4, h5, h6, p, a {
 text-align: center;
 color: rgb(211, 207, 207);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h1 {
   padding-top:5vh; 
@@ -90,7 +91,7 @@ footer {
   justify-content: space-evenly;
   padding: 2rem;
   background: rgb(33, 36, 35);
-  border-top: 4px solid lightblue;
+  border-top: 4px solid lightblue
 }
 .site-background{
   background-color: rgb(34, 41, 39);
