--- a/backups/9_20_2020/style.css
+++ b/backups/9_20_2020/style.css
@@ -72,6 +72,8 @@ ul {
 h1, h2, h3, h4, h5, h6, p, a {
 text-align: center;
 color: rgb(211, 207, 207);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+word-wrap: break-word;
 }
 h1 {
   padding-top:5vh; 
@@ -89,8 +91,8 @@ footer {
   display: flex;
   justify-content: space-evenly;
   padding: 2rem;
-  background: #1A1B41;
-  border-top: 4px solid var(--main-red);
+  background: rgb(33, 36, 35);
+  border-top: 4px solid lightblue
 }
 .site-background{
   background-color: rgb(34, 41, 39);
@@ -172,9 +174,6 @@ footer {
 /* start card stuff */
 .wrapper {
   text-align: center;
-  }
-  p {
-    word-wrap: break-word;
   }
   .img-area {
   display: flex;
