--- a/style - Copy.css
+++ b/style - Copy.css
@@ -272,7 +272,7 @@ box-shadow: 0 25px 50px rgba(50, 50, 93, .15),
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-  url('img/welcomeBackground.jpg') no-repeat center center fixed; 
+  url('img/welcomeBackground.PNG') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
